@@ -1,5 +1,6 @@
 package com.oryanend.tom_perfeito_api.config;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import org.springframework.beans.factory.annotation.Value;
@@ -32,7 +33,8 @@ public class ResourceServerConfig {
   @Value("${cors.origins}")
   private String corsOrigins;
 
-  @Value("${app.cors.allowed-origins}")
+  // make this optional with empty default to avoid missing-placeholder errors in some envs
+  @Value("${app.cors.allowed-origins:}")
   private String angularOrigin;
 
   @Bean
@@ -72,24 +74,49 @@ public class ResourceServerConfig {
 
   @Bean
   CorsConfigurationSource corsConfigurationSource() {
-
-    String[] origins = corsOrigins.split(",");
-
+    List<String> allowed = getStrings();
     CorsConfiguration corsConfig = new CorsConfiguration();
-    corsConfig.setAllowedOriginPatterns(Arrays.asList(origins));
-    corsConfig.setAllowedMethods(Arrays.asList("POST", "GET", "PUT", "DELETE", "PATCH"));
-    corsConfig.setAllowCredentials(true);
-    corsConfig.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
 
-    // Allow requests from the Angular frontend (adjust the origin as needed)
-    corsConfig.setAllowedOrigins(List.of(angularOrigin));
-    corsConfig.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-    corsConfig.setAllowedHeaders(List.of("*"));
+    if (!allowed.isEmpty()) {
+      corsConfig.setAllowedOriginPatterns(allowed);
+      corsConfig.setAllowedOrigins(allowed);
+    } else {
+      corsConfig.setAllowedOriginPatterns(List.of("*"));
+    }
+
+    corsConfig.setAllowedMethods(Arrays.asList("POST", "GET", "PUT", "DELETE", "PATCH", "OPTIONS"));
     corsConfig.setAllowCredentials(true);
+    corsConfig.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "*"));
 
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
     source.registerCorsConfiguration("/**", corsConfig);
     return source;
+  }
+
+  private List<String> getStrings() {
+    List<String> allowed = new ArrayList<>();
+
+    if (corsOrigins != null && !corsOrigins.isBlank()) {
+      String[] origins = corsOrigins.split(",");
+      for (String o : origins) {
+        String trimmed = o.trim();
+        if (!trimmed.isEmpty()) {
+          allowed.add(trimmed);
+        }
+      }
+    }
+
+    if (angularOrigin != null && !angularOrigin.isBlank()) {
+      String[] ao = angularOrigin.split(",");
+      for (String o : ao) {
+        String trimmed = o.trim();
+        if (!trimmed.isEmpty() && !allowed.contains(trimmed)) {
+          allowed.add(trimmed);
+        }
+      }
+    }
+
+    return allowed;
   }
 
   @Bean
